@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.2.3.2"
+  "version": "3.2.3.3"
 }
